tests/test_date/bad/rounding_option.catala_en
```catala
declaration scope Test:
  internal bday content date
  internal today content date
  output ambiguous content boolean

scope Test:
  definition bday equals |2000-02-29|
  definition today equals |2018-03-01|
  definition ambiguous equals bday + 18 year <= today 
```

```catala-test-inline
$ catala Interpret -s Test
[ERROR] Unexpected error: Dates_calc.Dates.AmbiguousComputation
#return code 125#
```
